# DuetOS kernel Rust link unit.
#
# Subsystem crates stay as standalone rlibs. This crate is the one staticlib the
# C++ kernel links, so `core` / `alloc` / panic runtime appear exactly once.

[package]
name = "duetos_kernel_rust"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "DuetOS kernel Rust staticlib link unit"

[lib]
name = "duetos_kernel_rust"
crate-type = ["staticlib"]

[dependencies]
duetfs = { path = "../fs/duetfs" }
duetos_exec_meta = { path = "../loader/exec_meta_rust" }
duetos_img_meta = { path = "../util/img_meta_rust" }
duetos_net_parsers = { path = "../net/parsers_rust" }
duetos_usb_msc_scsi = { path = "../drivers/usb/msc_scsi_rust" }
usbclass = { path = "../drivers/usb/class_rust" }
usbhid = { path = "../drivers/usb/hid_rust" }

[lints]
workspace = true
